# POO-Teme

./: Bautura.cpp  Bautura.h  CMakeLists.txt  Ciorba.cpp  Ciorba.h  Client.cpp  Client.h  Desert.cpp  Desert.h  Fel_principal.cpp  Fel_principal.h  Masa.cpp  Masa.h  Preparat.cpp  Preparat.h  README.md  main.cpp
