cmake_minimum_required(VERSION 3.17)
project(POO_Proiect_Restaurant)

set(CMAKE_CXX_STANDARD 14)

add_executable(POO_Proiect_Restaurant main.cpp Bautura.cpp Bautura.h Ciorba.cpp Ciorba.h Desert.cpp Desert.h Fel_principal.cpp Fel_principal.h Masa.cpp Masa.h Preparat.cpp Preparat.h Client.cpp Client.h)